[package]
name = "rpool"
version = "1.0.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
repository = "https://github.com/Protryon/rpool"
description = "Lock-free generic resource pool implementation."
keywords = [ "lockfree", "atomic", "resource", "pool" ]

[dependencies]
